[metadata]
name = crosscompute-views-math
version = 0.0.1
description = Render mathematical notation in your tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    # Framework :: CrossCompute
    # Intended Audience :: Analysts
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute-views-math/issues
    Documentation = https://github.com/crosscompute/crosscompute-views-math
    Source Code = https://github.com/crosscompute/crosscompute-views-math
[options]
packages = find:
python_requires = >=3.10
install_requires =
    crosscompute>=0.9.4.6
zip_safe = True
[options.package_data]
crosscompute_views_math =
    assets/*.css
    assets/*.html
    assets/*.js
[options.entry_points]
crosscompute.views =
    math-ascii = crosscompute_views_math.routines.variable.AsciiMathView
[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503
